# frost

./: .env.example  .gitignore  LICENSE  README.md  deploy.sh  frost-config.yml  pyproject.toml  requirements.txt  setup.py
docs/: index.html
examples/: .env.example  frost-config.yml  generate_key_pair.sh
examples/data/: countries.csv  countries.yml
frost/: __init__.py  cli.py  config.py  connector.py  graph.py  parser.py  tracker.py
objects/grants/: read_only_grants.sql
objects/procedures/: sp_get_sample_count.sql
objects/schemas/: my_schema.sql
objects/tables/: orders.sql
shared_error_log/: error1.txt
src/frost/: __init__.py  __main__.py  cli.py  config.py  connector.py  cortex.py  data_loader.py  deployer.py  graph.py  lineage.py  parser.py  reporter.py  resources.py  scaffold.py  streamlit.py  tester.py  tracker.py  visualizer.py
tests/: conftest.py  helpers.py  test_activation_safety.py  test_cli.py  test_cli_lineage_json.py  test_config.py  test_connector.py  test_cortex.py  test_data_loader.py  test_deployer.py  test_graph.py  test_graph_subgraph.py  test_lifecycle.py  test_lineage.py  test_parser.py  test_reporter.py  test_resources.py  test_streamlit.py  test_tester.py  test_visualizer.py
tests/data/: dependency_cases.csv  escape_cases.csv  parser_cases.csv  sample_load.csv  sample_load.yml  splitter_cases.csv  tester_empty.csv  tester_orders.csv  tester_users.csv  tester_users_dupes.csv  tester_users_nulls.csv
vscode-frost/: .gitignore  README.md  frost-snowflake-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
(+30 files in other folders)
